mlops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-app
  template:
    metadata:
      labels:
        app: mlops-app
    spec:
      containers:
        - name: mlops-container
          image: vishalsiram/mlops:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mlops-service
spec:
  selector:
    app: mlops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-ingress
spec:
  rules:
    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: mlops-service
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: mlops-service
                port:
                  number: 5000
  # Add annotations for traffic splitting if your Kubernetes cluster supports it
  # For example, you can use annotations like "nginx.ingress.kubernetes.io/canary", "nginx.ingress.kubernetes.io/canary-weight", etc.
